# fwupd

./: .pre-commit-config.yaml  meson.build  meson_options.txt
.github/workflows/: snap.yml
contrib/ci/: dependencies.xml  rustfmt.py
libfwupdplugin/: fu-crc.rs  fu-self-test.c  meson.build
libfwupdplugin/tests/bios-attrs/dell-xps13-9310/dell-wmi-sysman/attributes/Asset/: type
libfwupdplugin/tests/bios-attrs/dell-xps13-9310/dell-wmi-sysman/attributes/AutoOnMn/: scalar_increment
libfwupdplugin/tests/bios-attrs/dell-xps13-9310/dell-wmi-sysman/attributes/AutoOnSat/: dell_modifier
libfwupdplugin/tests/bios-attrs/dell-xps13-9310/dell-wmi-sysman/attributes/AutoOnSun/: display_name
libfwupdplugin/tests/bios-attrs/dell-xps13-9310/dell-wmi-sysman/attributes/CStatesCtrl/: possible_values
libfwupdplugin/tests/bios-attrs/dell-xps13-9310/dell-wmi-sysman/attributes/FOTA/: current_value
libfwupdplugin/tests/bios-attrs/dell-xps13-9310/dell-wmi-sysman/attributes/Fastboot/: display_name_language_code
libfwupdplugin/tests/bios-attrs/dell-xps13-9310/dell-wmi-sysman/attributes/PwdMinLen/: type
libfwupdplugin/tests/bios-attrs/lenovo-p620-6.3/thinklmi/: uevent
libfwupdplugin/tests/bios-attrs/lenovo-p620-6.3/thinklmi/power/: async  autosuspend_delay_ms
plugins/: meson.build
plugins/jabra-gnp/: README.md  fu-jabra-gnp-device.c  fu-jabra-gnp-device.h  fu-jabra-gnp-plugin.c  fu-jabra-gnp-plugin.h  jabra_gnp.quirk  meson.build
plugins/uefi-capsule/: fu-acpi-uefi.c  fu-acpi-uefi.h  fu-uefi-capsule-plugin.c  fu-uefi-cod-device.c  fu-uefi-device.c  fu-uefi-device.h
(+258 files in other folders)
